Remove incorrect DCHECK from MediaStreamVideoSource.

When the last track from a source is removed, the source is
asynchronously stopped. Between the request to stop and the reception of
a notification about actual stop it is possible that a new track is
added to the source (e.g., by cloning the track being removed).

There was a DCHECK asserting that there could be no tracks when the stop
notification is received, but as the example above shows, this is not
necessarily the case. No further changes are required since the newly
added track will start out ended due to being connected to a stopped source.

A test that fails with the old DCHECK is added to prevent similar
regressions.

Drive-by: Replace the |webkit_| prefix with |web_| on the test.

Bug: 770908
Change-Id: I7ce01d3f0a2a5f77e161c88eb58c5334fad0aa3b
Reviewed-on: https://chromium-review.googlesource.com/c/1258002
Reviewed-by: Harald Alvestrand <hta@chromium.org>
Commit-Queue: Guido Urdaneta <guidou@chromium.org>
Cr-Commit-Position: refs/heads/master@{#596212}