content/renderer/media/stream/media_stream_video_source.cc
@@ -124,7 +124,7 @@ void MediaStreamVideoSource::RemoveTrack(MediaStreamVideoTrack* video_track,
       // stopping a source with StopSource() can have side effects that affect
       // sources created after that StopSource() call, but before the actual
       // stop takes place. See http://crbug.com/778039.
-      StopForRestart(base::BindOnce(&MediaStreamVideoSource::DidRemoveLastTrack,
+      StopForRestart(base::BindOnce(&MediaStreamVideoSource::DidStopSource,
                                     weak_factory_.GetWeakPtr(),
                                     std::move(callback)));
       if (state_ == STOPPING_FOR_RESTART || state_ == STOPPED_FOR_RESTART) {
@@ -137,7 +137,7 @@ void MediaStreamVideoSource::RemoveTrack(MediaStreamVideoTrack* video_track,
         FinalizeStopSource();
       } else {
         // If the source does not support restarting, call StopSource()
-        // to ensure stop on this task. DidRemoveLastTrack() will be called on
+        // to ensure stop on this task. DidStopSource() will be called on
         // another task even if the source does not support restarting, as
         // StopForRestart() always posts a task to run its callback.
         StopSource();
@@ -150,11 +150,10 @@ void MediaStreamVideoSource::RemoveTrack(MediaStreamVideoTrack* video_track,
   }
 }
 
-void MediaStreamVideoSource::DidRemoveLastTrack(base::OnceClosure callback,
-                                                RestartResult result) {
+void MediaStreamVideoSource::DidStopSource(base::OnceClosure callback,
+                                           RestartResult result) {
   DCHECK_CALLED_ON_VALID_SEQUENCE(sequence_checker_);
   DCHECK(callback);
-  DCHECK(tracks_.empty());
   DCHECK_EQ(Owner().GetReadyState(),
             blink::WebMediaStreamSource::kReadyStateEnded);
   if (result == RestartResult::IS_STOPPED) {
